style: fix horizontal overflow to fit web content to edges

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,8 @@
 
 html {
   scroll-behavior: smooth;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -18,6 +20,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 /* Scrollbar Styling */
